kubernetes/apps/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  ports:
    - port: 8080
  selector:
    app: sabnzbd
