kubernetes/apps/media/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - sabnzbd.local.elmurphy.com
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
